test_suite5/ALAN/test_suite/alan-2022-examples/failing/004390_mutation.alan
source w begin leave <> (9) end
